fix z-index

--- a/styles/designs/cosmos/parts/_unitopener-components.scss
+++ b/styles/designs/cosmos/parts/_unitopener-components.scss
@@ -98,7 +98,7 @@ $Unit__Page__Bg: (
     margin-left: fullBleedsMargin(-1, in),
     margin-top: fullBleedsMargin(-0.8, in),
     margin-bottom: fullBleedsMargin(-0.8, in),
-    z-index: -3,
+    z-index: -1,
     box-sizing: border-box,
   ),
 );
