--- a/styles/output/english-composition-pdf.css
+++ b/styles/output/english-composition-pdf.css
@@ -1036,7 +1036,7 @@ a[role="doc-noteref"] {
   margin-left: -1.15in;
   margin-top: -0.95in;
   margin-bottom: -0.95in;
-  z-index: -3;
+  z-index: -1;
   box-sizing: border-box; }
 
 [data-type="unit"] > h1[data-type="document-title"] {
